opsiconfd (4.0.6.7-1) UNRELEASED; urgency=medium

  * Collect statistics about the average method call duration.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 10 Sep 2015 14:00:15 +0200

opsiconfd (4.0.6.6-1) experimental; urgency=medium

  * Info page: show at what time an encoding error occured.
  * Infos about updated rrd now only are shown with loglevel 8
  * opsiconfd.workers: Query decoding now working similar to the one in
    OPSI.Service.Worker
  * CentOS / Red Hat 7: Fix requiring /bin/python instead of /usr/bin/python
  * RPM: License is now machine-parseable.
  * Create user / groups without explicit uid / gid.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 25 Aug 2015 10:52:46 +0200

opsiconfd (4.0.6.5-1) experimental; urgency=medium

  * Showing what the actual error was that was experienced when collecting statistics.
  * Showing the time of service start on the info page.
  * simplify logrotate config.
  * Showing uptime of the service on the info page.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 13 Jul 2015 10:37:04 +0200

opsiconfd (4.0.6.4-12) experimental; urgency=medium

  * Ignore error from pkg-config in postinst.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 17 Jun 2015 10:42:56 +0200

opsiconfd (4.0.6.4-11) experimental; urgency=medium

  * Correct name of service file.
  * More error resistant installation.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 17 Jun 2015 09:43:22 +0200

opsiconfd (4.0.6.4-10) experimental; urgency=medium

  * Improving the removal of the service files.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 16 Jun 2015 16:54:04 +0200

opsiconfd (4.0.6.4-9) experimental; urgency=medium

  * RPM: Removing debug package.
  * RPM: small fix in postinst-script.
  * RPM: removing service file on uninstall
  * RPM: require pkgconfig for RedHat family, pkg-config for suse family

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 16 Jun 2015 14:03:08 +0200
