@@ -1,8 +1,9 @@
 opsiconfd (4.0.6.7-1) UNRELEASED; urgency=medium
 
   * Collect statistics about the average method call duration.
+  * Info page: show the average call duration next to the most called functions
 
- -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 10 Sep 2015 14:00:15 +0200
+ -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 10 Sep 2015 14:11:35 +0200
 
 opsiconfd (4.0.6.6-1) experimental; urgency=medium
 
